# QuranUnix

./: "quran-unix".spec  .dockerignore  .editorconfig  .flake8  .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  FAQ.md  LICENSE  LICENSE.AR  MANIFEST.in  Makefile  PRIVACY.md  README.AR.md  README.md  ROADMAP.md  SECURITY.md  config.py  docker-compose.yml  install.sh  main.py  pyproject.toml  quickstart.sh  quran-unix.desktop  quran-unix.spec  requirements-dev.txt  run.sh  setup.cfg  setup.py  test_app.py  tox.ini  uninstall.sh  utils.py
