[metadata]
name = mushaf-madinah
version = 1.0.0
author = Quran App Team
author_email = 
description = تطبيق قراءة القرآن الكريم بخط المصحف المدني
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/mushaf-madinah
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Topic :: Religion :: Islamic
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.8
install_requires =
    PyQt6>=6.4.0
    PyMuPDF>=1.23.0

[options.entry_points]
console_scripts =
    mushaf-madinah = src.main:main

[options.package_data]
* = *.png, *.pdf
